--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,9 +7,21 @@ body {
   font-weight:300;
 }
 
-h1, h2, h3, h4, h5, h6 {
+div#profile-image {
+  margin-bottom : 20px;
+}
+
+div.contact {
+  margin-bottom : 10px;
+}
+h1, h2, h3 {
   color:#222;
   margin:0 0 20px;
+}
+
+h4, h5, h6 {
+  color:#222;
+  margin:0 0 5px;
 }
 
 p, ul, ol, table, pre, dl {
