--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -14,6 +14,16 @@ div#profile-image {
 div.contact {
   margin-bottom : 10px;
 }
+
+div.pub-title {
+  color : #777777;
+  font-weight : bold;
+}
+
+div.misc-item {
+  margin-bottom:5px;
+}
+
 h1, h2, h3 {
   color:#222;
   margin:0 0 20px;
