--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -22,6 +22,11 @@ h3.section-header {
   margin: auto;
   text-decoration: underline;
 }
+h3.section-header-long {
+  width:10em;
+  margin: auto;
+  text-decoration: underline;
+}
 div.pub-title {
   color : #8f2400;
   font-weight : bold;
