--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,6 +1,6 @@
-<dl id="" class="wp-caption align{{include.align}}" style="max-width: {{include.width}}px">
+<dl id="" class="align{{include.align}}" style="max-width: {{include.width}}px">
 
-<dt><a href="{{ include.href }}"><img class="" src="{{ include.url }}" alt="{{ include.caption }}" /></a></dt>
+<dt><img class="" src="{{ include.url }}" alt="{{ include.caption }}" /></dt>
 
 <dd>{{ include.caption }}</dd>
 </dl>
