--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,34 +5,44 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }} by {% if page.author %} {{ page.author }}{% endif %}  
-{% if page.categories %}
-  in
-  {% for cat in page.categories %}
-  <a href="/categories/#{{ cat }}" title="{{ cat }}">{{ cat }}</a>&nbsp;
-  {% endfor %}
-
-{% endif %}
-</p>
+    <p class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }} 
+      {% if page.author %} by {{ page.author }}{% endif %}  
+      {% if page.categories %}
+        in
+        {% for cat in page.categories %}
+        <a href="/categories/#{{ cat }}" title="{{ cat }}">{{ cat }}</a>&nbsp;
+        {% endfor %}
+      {% endif %}
+    </p>
   </header>
 
   <article class="post-content">
     {{ content }}
   </article>
 
-<div id="disqus_thread"></div>
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'svmiller';
-    
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-
+  
+<div class="pagination">
+    {% if page.previous %}
+      <a class="btn btn-default" href="{{ site.baseurl}}{{ page.previous.url }}" class="previous">≪Older</a>
+    {% endif %}
+    {% if page.next %}
+      <a class="btn btn-default" href="{{ site.baseurl}}{{ page.next.url
+      }}" class="next">Newer≫</a>
+    {% endif %}
 </div>
+
+{% if site.comments %}
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES * * */
+        var disqus_shortname = 'tycon'
+        
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+  {% endif %}
