--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,29 +20,26 @@ layout: default
     {{ content }}
   </article>
 
-  
-<div class="pagination">
-    {% if page.previous %}
-      <a class="btn btn-default" href="{{ site.baseurl}}{{ page.previous.url }}" class="previous">≪Older</a>
-    {% endif %}
+  <div class="pagination">
     {% if page.next %}
       <a class="btn btn-default" href="{{ site.baseurl}}{{ page.next.url
-      }}" class="next">Newer≫</a>
+      }}" class="next">≪Newer</a>
     {% endif %}
-</div>
+    {% if page.previous %}
+      <a class="btn btn-default" href="{{ site.baseurl}}{{ page.previous.url }}" class="previous">Older≫</a>
+    {% endif %}
+  </div>
 
-{% if site.comments %}
+  {% if site.comments %}
     <div id="disqus_thread"></div>
     <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES * * */
-        var disqus_shortname = 'tycon'
-        
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
+      var disqus_shortname = '{{ site.disqus }}';
+
+    (function() {
+      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+      dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
   {% endif %}
+</div>
