--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -56,16 +56,21 @@
   </li>
 {% endif %}
 
-
-
-
-
-
-
         </ul>
       </div>
     </div>
 
   </div>
+
+  <script type="text/javascript"
+   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
+  <script type="text/javascript">
+    MathJax.Hub.Config({
+      tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+      }
+    });
+  </script>
 
 </footer>
